unpackaged/main/default/objects/Attribute_Value__c/Attribute_Value__c.object-meta.xml
<CustomObject>
    <label>Attribute Value</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attribute Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>