unpackaged/main/default/objects/Attribute_Value__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>