unpackaged/main/default/objects/Attribute_Value__c/fields/Attr_Name__c.field-meta.xml
<CustomField>
    <fullName>Attr_Name__c</fullName>
    <formula>Attribute__r.Attr_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attr Name</label>
    <type>Text</type>
</CustomField>