unpackaged/main/default/objects/Attribute_Value__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>