unpackaged/main/default/objects/Attribute_Value__c/fields/Base_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset Template</label>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>