unpackaged/main/default/objects/Attribute_Value__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <formula>NOT(ISBLANK(Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed?</label>
    <type>Checkbox</type>
</CustomField>