unpackaged/main/default/objects/Attribute_Value__c/fields/Is_Value_Defaulted__c.field-meta.xml
<CustomField>
    <fullName>Is_Value_Defaulted__c</fullName>
    <formula>IF(NOT(ISBLANK(Attribute__r.Default_value__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Value Defaulted?</label>
    <type>Checkbox</type>
</CustomField>