unpackaged/main/default/objects/Attribute_Value__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>