unpackaged/main/default/objects/Attribute_Value__c/fields/Site_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Site_Metadata__c</fullName>
    <label>Site Metadata</label>
    <referenceTo>Site_Metadata__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>Attribute_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>