unpackaged/main/default/objects/Attribute_Value__c/fields/Value_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Value_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value (Checkbox)</label>
    <type>Checkbox</type>
</CustomField>