unpackaged/main/default/objects/Attribute_Value__c/fields/Value_Floating__c.field-meta.xml
<CustomField>
    <fullName>Value_Floating__c</fullName>
    <label>Value (Floating)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>