unpackaged/main/default/objects/Attribute_Value__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <label>Value (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>